--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class = "header">
 <link rel="stylesheet" type="text/css" href="style.css">
 <div class="navbar">
-<a href="Home.html">Home</a>
+<a href="index.html">Home</a>
 <a href="About the author.html">About the author</a>
 <a href="Freestyle.html">Freestyle</a>
 <a href="Backstroke.html"> Backstroke</a>
