--- a/Backstroke.html
+++ b/Backstroke.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <div class = "header">
 <div class="navbar">
-<a href="index.html">Home</a>
+<a href="Home.html">Home</a>
 <a href="About the author.html">About the author</a>
 <a href="Freestyle.html">Freestyle</a>
 <a href="Backstroke.html"> Backstroke</a>
@@ -15,9 +15,11 @@
 </div>
 <!--Backstroke-->
 <h1>What is Backstroke?</h1>
-<img src="https://allamericanswim.com/media/wysiwyg/Backstroke.jpg"  height="295px" width="900px"> <p> This image credit goes to allamwericanswim.com </p>
+<img src="https://allamericanswim.com/media/wysiwyg/Backstroke.jpg"  height="295px" width="900px"> <p> This image credit goes to allamericanswim.com </p>
+<div class="content">
 <p><strong>Backstroke is the mirror of Freestyle. You do not have to worry about breathing because like the name says you are going to
 swim on your back which is easier to breathe than freestyle. </strong></p>
+</div>
 <h2> What are the techniques for backstroke?</h2>
 <p><strong>For backstroke you must face the roof or the sky (depending on if your pool is an indoor pool or an outdoor pool.)
 One arm will come up of the water and go over your head, while the other arm comes upward in the water.
