--- a/Breaststroke.html
+++ b/Breaststroke.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <div class = "header">
 <div class="navbar">
-<a href="index.html">Home</a>
+<a href="Home.html">Home</a>
 <a href="About the author.html">About the author</a>
 <a href="Freestyle.html">Freestyle</a>
 <a href="Backstroke.html"> Backstroke</a>
@@ -16,8 +16,10 @@
 <!--Breastroke-->
 <h1> What is Breaststroke? </h1>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTRIGyKkW2witz_ZutKHWu-RkIfLMNF3_crkm_WludRwXPwoCs%3Ahttps%3A%2F%2Fi.pinimg.com%2F236x%2F72%2F6a%2F23%2F726a2379a4eefe0fed2db5b8d184cf9b.jpg&usqp=CAU" height="358px" width="141px">
-<p> This iimage credit goes to openfit.com </p>
+<p> This image credit goes to openfit.com </p>
+<div class="content">
 <p><strong> Breaststroke is the easiest stroke to begin with if you are new to swimming. It is also a slow stroke which means you do not have to be too fast. </strong></p>
+</div>
 <h2> What are the techniques of breaststroke? </h2>
 <p><strong> For breaststroke, your body will be in the same horizontal position as freestyle. Your arms will be move together at the same in half-circular motion under the water.
 Your arms first will be in the gliding position. Then, your arms will bend at the elbow, then sweep apart and then toward your chest. While doing this with your arms your legs will be doing the frog kick.
