--- a/Butterfly.html
+++ b/Butterfly.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style.css"
 <div class = "header">
 <div class="navbar">
-<a href="index.html">Home</a>
+<a href="Home.html">Home</a>
 <a href="About the author.html">About the author</a>
 <a href="Freestyle.html">Freestyle</a>
 <a href="Backstroke.html"> Backstroke</a>
@@ -15,8 +15,10 @@
 </div>
 <!--Butterfly-->
 <h1> What is Butterfly? </h1>
-<img src="https://allamericanswim.com/media/wysiwyg/Butterfly.jpg" height="900px" width="600px" > <p> This image credit goes to allamwericanswim.com </p>
+<img src="https://allamericanswim.com/media/wysiwyg/Butterfly.jpg" height="900px" width="600px" > <p> This image credit goes to allamericanswim.com </p>
+<div class="content">
 <p><strong> Butterfly is the most challenging. You must have lot of strength and coordination which takes time to develop. </strong></p>
+</div>
 <h2>What are the techniques for Butterfly? </h2>
 <p><strong>  The name butterfly comes on how your arm moves for this stroke. You do this stroke by moving both your arms at the same time.
 Your arms come out of the like wings, except your thumb is facing towards the water. Your body is in the same position as freestyle and breaststroke-horizontal.
