--- a/Freestyle.html
+++ b/Freestyle.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <div class = "header">
 <div class="navbar">
-<a href="index.html">Home</a>
+<a href="Home.html">Home</a>
 <a href="About the author.html">About the author</a>
 <a href="Freestyle.html"> Freestyle</a>
 <a href="Backstroke.html"> Backstroke</a>
@@ -17,7 +17,7 @@
 <!--Main paragraph-->
 <h1> What is Freestyle?</h1>
 <img src="https://allamericanswim.com/media/wysiwyg/Freestyle.jpg"
- height="297px" width="900px"> <p> This image credit goes to allamwericanswim.com</p>
+ height="297px" width="900px"> <p> This image credit goes to allamericanswim.com</p>
 <div class="content">
 <p><strong>Freestyle is a stroke that is used to swim fast laps without losing all your energy. </strong>
 </div>
